- Fix videos on mobile

--- a/Public/global.css
+++ b/Public/global.css
@@ -97,4 +97,8 @@ a:hover {
  border-radius: 0px;
 }
 
+video {
+ width: 100%;
+}
+
 }
